[package]
name = "cutter"
version = "0.1.0"
authors = ["Ibai <lllibailll20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "1.4.5", features = ["mysql"] }

lazy_static = "1.4.0"

rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["diesel_mysql_pool"] }
